# ncsdk

./: .dockerignore  CMakeLists.txt  README_CMAKE.md  VERSION
api/: CMakeLists.txt  version.txt
api/python/: setup.py
api/python/mvnc/: mvncapi.py
api/src/: mvnc_api.c
api/src/common/components/XLink/pc/: XLinkPlatform.c  usb_boot.c
api/src/common/components/XLink/shared/: XLink.c  XLink.h  XLinkDispatcher.c  XLinkDispatcher.h  XLinkPlatform.h
api/src/mvnc/: MvNCAPI-ma2450.mvcmd  MvNCAPI-ma2480.mvcmd
cmake/: download.cmake  python.cmake
cmake/modules/: FindLibUSB.cmake
cmake/templates/: cmake_uninstall.cmake.in  download.cmake.in  ncsdkConfig.cmake.in  py_packaging.cmake.in
config/: ncsdk.conf.in
examples/: CMakeLists.txt
examples/apps/: CMakeLists.txt
examples/apps/hello_ncs_cpp/: CMakeLists.txt
examples/apps/image-classifier/: image-classifier.py
examples/apps/multistick_cpp/: CMakeLists.txt
examples/apps/object-detector/: object-detector.py
examples/caffe/: CMakeLists.txt
examples/caffe/AlexNet/: CMakeLists.txt  deploy.prototxt
examples/caffe/GoogLeNet/: CMakeLists.txt  deploy.prototxt
examples/caffe/SSD_MobileNet/: CMakeLists.txt  download_mobilenet_ssd.py
examples/caffe/SqueezeNet/: CMakeLists.txt  deploy.prototxt
examples/caffe/TinyYolo/: CMakeLists.txt
examples/data/: CMakeLists.txt
examples/tensorflow/: CMakeLists.txt
examples/tensorflow/inception_v1/: CMakeLists.txt
examples/tensorflow/inception_v3/: CMakeLists.txt
extras/docker/: Dockerfile  README.md
tk/: CMakeLists.txt  version.txt
tk/mvnctools-check/: setup.py
tk/mvnctools-check/mvnctools/: mvNCCheck
tk/mvnctools-compile/: setup.py
tk/mvnctools-compile/mvnctools/: mvNCCompile
tk/mvnctools-lib/: setup.py
tk/mvnctools-lib/mvnctools/Controllers/: Adaptor.py  Args.py  BlobBuilder.py  CaffeEnumController.py  CaffeParser.py  CnnHardware.py  ConversionPlacement.py  DataTransforms.py  EnumController.py  FileIO.py  Globals.py  HwCompiler.py  HwDescriptorSerializer.py  Metrics.py  MiscIO.py  NCE.py  Optimizer.py  PingPong.py  Preprocess.py  ProductionSchedulers.py  Scheduler.py  Soh.py  Tensor.py  TensorFlowParser.py  TensorFlowPreproc.py
tk/mvnctools-lib/mvnctools/Controllers/Parsers/: Caffe.py  Phases.py  TensorFlow.py  __init__.py
tk/mvnctools-lib/mvnctools/Controllers/Parsers/CaffeParser/: BatchNorm.py  Bias.py  Concat.py  Convolution.py  Deconvolution.py  DetectionOutput.py  Dropout.py  ELU.py  Eltwise.py  Flatten.py  Helpers.py  InnerProduct.py  Input.py  LRN.py  Normalize.py  PReLU.py  Pooling.py  PriorBox.py  ReLU.py  Reshape.py  Scale.py  Sigmoid.py  Slice.py  Softmax.py  __init__.py  crop.py  permute.py  tan_h.py
tk/mvnctools-lib/mvnctools/Controllers/Parsers/Parser/: BatchNorm.py  Bias.py  Concat.py  Conversion.py  Convolution2D.py  DetectionOutput.py  ELU.py  Eltwise.py  Flatten.py  Hw.py  InnerProduct.py  Input.py  LRN.py  Layer.py  NoOp.py  Normalize.py  Output.py  PReLU.py  Permute.py  Pooling.py  PriorBox.py  ReLU.py  Reshape.py  Scale.py  Sigmoid.py  Slice.py  Softmax.py  Square.py  crop.py  tan_h.py
tk/mvnctools-lib/mvnctools/Controllers/Parsers/TensorFlowParser/: BiasAdd.py  Concat.py  Convolution.py  Eltwise.py  FusedBatchNorm.py  Helpers.py  Identity.py  LRN.py  MatMul.py  NoOp.py  Pad.py  Placeholder.py  Pooling.py  ReLU.py  RealDiv.py  Reshape.py  Slice.py  Softmax.py  __init__.py
tk/mvnctools-lib/mvnctools/Models/: Blob.py  CaffeEnumDeclarations.py  EnumDeclarations.py  HwDescriptor.py  Layouts.py  MyriadParam.py  Network.py  NetworkStage.py
tk/mvnctools-lib/mvnctools/Models/StageDefinitions/: AveragePooling.py  Bias.py  Convolution.py  Copy.py  Crop.py  Deconv.py  DepthConv.py  DetectionOutput.py  Eltwise.py  Elu.py  Elu_Op.py  FCL.py  InnerLRN.py  LRN.py  MaxConst.py  MaxPooling.py  MyriadXHardwareLayer.py  NoOp.py  Normalize.py  Op.py  OpManager.py  Permute.py  Power.py  Prelu.py  PriorBox.py  Relu.py  Relu_Op.py  Reshape.py  Rsqrt.py  Scale.py  ScaleScalar.py  Sigmoid.py  Softmax.py  Square.py  StorageOrderConvert.py  SumReduce.py  TanH.py  ToPlaneMajor.py
tk/mvnctools-lib/mvnctools/Views/: Graphs.py  IRVisualize.py  Summary.py  Validate.py
tk/mvnctools-profile/: setup.py
tk/mvnctools-profile/mvnctools/: mvNCProfile
